# serverless-streams

./: .gitignore  README.md
infra/: README.md  package-lock.json  package.json
infra/lib/: api-stack.ts  data-stack.ts  utils.ts
server/: Cargo.toml  README.md  env.dev.example
server/src/: consume.rs  main.rs  produce.rs
