[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.101.0"
aws-sdk-s3 = "1.118.0"
futures = { version = "0.3.31", features = ["alloc"] }
lambda_http = "1.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
